monticore-generator/src/test/resources/cocos/invalid/A2007/A2007Sup2.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A2007;

grammar A2007Sup2 extends cocos.invalid.A2007.A2007Super {

  M = Name?;

}